Fix display of units on mobile phone

--- a/source/components/_helpes.scss
+++ b/source/components/_helpes.scss
@@ -1,5 +1,6 @@
 body {
     min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     width: 100%;
 }
 
